# MySController-rs

./: .bintray.json  .gitignore  .travis.yml  Blink.ino.hex  Cargo.toml  Cross.toml  Dockerfile  README.md  Rocket.toml  build.sh  conf.ini  conf.toml  docker_push.sh  install_dependencies.sh  sample.hex
.cargo/: config
firmwares/: 1__1__default.hex
migrations/2018-04-16-170858_create_nodes/: up.sql
migrations/2018-04-25-200801_create_firmwares/: down.sql  up.sql
migrations/2018-05-15-193701_more_fields_in_nodes.1/: down.sql  up.sql
migrations/2018-05-30-120000_current_and_desired_firmware_versions_in_nodes/: down.sql  up.sql
migrations/2018-06-20-073200_create_sensors_table/: down.sql  up.sql
migrations/2018-10-12-103949_add_parent_node_id_in_nodes/: down.sql  up.sql
service/systemd/: myscontroller-rs.service
src/: api.rs  connection.rs  firmware.rs  firmware_api.rs  gateway.rs  interceptor.rs  lib.rs  main.rs  message.rs  node.rs  node_api.rs  ota.rs  pool.rs  proxy.rs  proxy_controller.rs  schema.rs  tcp_gateway.rs
src/api/: firmware.rs  index.rs  mod.rs  node.rs  sensor.rs
src/config/: mod.rs  model.rs  parser.rs
src/core/: connection.rs  interceptor.rs  message.rs  message_handler.rs  mod.rs  ota.rs  proxy.rs  server.rs
src/core/connection/: mod.rs  mqtt.rs  serial.rs  tcp.rs
src/core/message/: error.rs  internal.rs  mod.rs  presentation.rs  set.rs  stream.rs  stream_message.rs
src/core/message_handler/: internal.rs  mod.rs  presentation.rs  set.rs  stream.rs
src/handler/: firmware.rs  mod.rs  node.rs  response.rs  sensor.rs
src/model/: db.rs  firmware.rs  mod.rs  node.rs  sensor.rs
src/wot/: adapter.rs  mod.rs
