[package]
name = "myscontroller-rs"
version = "0.5.1"
authors = ["tsathish <tsatiz@gmail.com>"]

[dependencies]
serialport = "2.3"
hex = "0.3"
ihex = "1.0"
enum_primitive = "0.1"
num = "0.1"
crc16 = "0.3.4"
rust-ini = "0.10"
diesel = { version = "^1.3", features = ["sqlite", "chrono","serde_json", "r2d2"] }
diesel-derive-enum = { version = "0.4", features = ["sqlite"] }
diesel_migrations = "1.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4"
r2d2 = "0.8.2"
crossbeam-channel = "0.1"
actix = "^0.5"
actix-web = "^0.6.12"
http = "^0.1.5"
env_logger = "^0.5.0"
futures = "^0.1.0"
num_cpus = "1.0"
bytes = "0.4.8"
log = "0.4"

[package.metadata.deb]
maintainer = "Sathishkumar <tsatiz@gmail.com>"
extended-description = """\
A proxy server for MySController \
to perform the ota updates."""
depends = "$auto"
section = "rust"
priority = "optional"
assets = [
    ["target/x86_64-unknown-linux-gnu/release/myscontroller-rs", "/usr/local/bin/myscontroller-rs", "755"],
    ["conf.ini", "/etc/myscontroller-rs/conf.ini", "644"],
    ["service/systemd/myscontroller-rs.service", "/etc/systemd/system/myscontroller-rs.service", "644"],
]
conf-files = [
  "/etc/myscontroller-rs/conf.ini",
  "/etc/systemd/system/myscontroller-rs.service"
]
