[package]
name = "myscontroller-rs"
version = "0.6.6"
authors = ["tsathish <tsatiz@gmail.com>"]
edition = "2018"

[dependencies]
serialport = "2.3"
hex = "0.3"
ihex = "1.0"
enum_primitive = "0.1"
num = "0.1"
crc16 = "0.3"
rust-ini = "0.10"
diesel = { version = "1.4.2", features = ["sqlite", "chrono","serde_json", "r2d2"] }
diesel-derive-enum = { version = "0.4", features = ["sqlite"] }
diesel_migrations = "1.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4"
r2d2 = "0.8"
crossbeam-channel = "0.1"
actix = "0.7"
actix-net = "0.2"
actix-web = "0.7"
http = "^0.1"
env_logger = "^0.5"
futures = "^0.1"
num_cpus = "1.0"
bytes = "0.4"
log = "0.4"
webthing = "0.9"

[package.metadata.deb]
maintainer = "Sathishkumar <tsatiz@gmail.com>"
extended-description = """\
A proxy server for MySController \
to perform the ota updates."""
depends = "$auto"
section = "rust"
priority = "optional"
conf-files = [
  "/etc/myscontroller-rs/conf.ini",
  "/etc/systemd/system/myscontroller-rs.service"
]
assets = [
    ["target/x86_64-unknown-linux-gnu/release/myscontroller-rs", "/usr/local/bin/myscontroller-rs", "755"],
    ["conf.ini", "/etc/myscontroller-rs/conf.ini", "644"],
    ["service/systemd/myscontroller-rs.service", "/etc/systemd/system/myscontroller-rs.service", "644"],
]